# exaltered-plusplus

./: .bettercodehub.yml  .gitignore  .gitmodules  .travis.yml  README.md  codecov.yaml  get_code_cov.sh
exalteredpp/: CMakeLists.txt  exaltered-test.cpp  exalteredpp.pro
exalteredpp/Exaltered/: Exaltered.pro  exalteredapp.h
exalteredpp/exalteredpp/: CMakeLists.txt  exalteredpp.cpp  exalteredpp.h
exalteredpp/exalteredpp/test-case/: attribute-test.cpp
exalteredpp/headers/: exalteredapp.h
exalteredpp/headers/calculator/: derived_value_calculator.h  derived_value_definitions.h  experience_purchase_cost_calculator.h
exalteredpp/headers/character/: character.h
exalteredpp/headers/combat/: action_defines.h  attack_defines.h  mental_attack.h  physical_attack.h  weapon.h
exalteredpp/headers/common/: reverse_search.h  serialisable_map.h
exalteredpp/headers/equipment/: weapon.h
exalteredpp/headers/errors/: ability_not_found_exception.h  characternotfoundexception.h  error_codes.h  invalid_parameter.h
exalteredpp/headers/model/: character_list.h
exalteredpp/headers/qt/: caste_style.h  dependencies.h  exalteredapp.h  objects_factory.h
exalteredpp/headers/qt-test/: quick_chargen.h
exalteredpp/headers/serialisation/: db_abstraction.h  filesystem_db.h  json_constants.h  serialisable.h  serialisation_utils.h
exalteredpp/headers/test-case/: ability_factory_mock.h  character_manager_mock.h  db_abstraction_mock.h  diceroller_mock.h
exalteredpp/qt-test/: main.cpp  qt-test.pro
exalteredpp/src/: exalteredapp.cpp  main.cpp
exalteredpp/src/calculator/: derived_value_calculator.cpp  experience_purchase_cost_calculator.cpp
exalteredpp/src/character/: character.cpp
exalteredpp/src/combat/: weapon.cpp  (+1 more)
exalteredpp/test-case/: attribute-test.cpp
(+381 files in other folders)
